src/test/deca/context/invalid/created/voidElmt/fields.deca
// Description:
//      Utilisation d'un champ void
// Resultat:
//      Ligne 7 : Field can't be void

class A {
    void x;
}